named list to xpath validation